--- a/services/inference/pyproject.toml
+++ b/services/inference/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "uvicorn>=0.20.0",
     "pydantic>=2.0.0",
     "mediapipe>=0.10.0",
+    "grpcio>=1.74.0",
+    "grpcio-tools>=1.62.3",
+    "httpx>=0.24.0",
 ]
 
 [project.optional-dependencies]
